# RiffWeaver

./: .gitignore  Cargo.toml
src/: app.rs  auth.rs  constants.rs  events.rs  keybinds.rs  lib.rs  main.rs  redirect_uri.html  types.rs  user_config.rs  utility.rs
src/rustipy/: authorization.rs  config.rs  constants.rs  mod.rs  token.rs
