[package]
name = "riff_weaver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
chrono = "0.4.31"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"]}
serde_json = "1.0.108"
sha256 = "1.4.0"
tokio = "1.35.0"

[lib]
name = "libra"
path = "src/lib.rs"

[[bin]]
name = "rustipy"
path = "src/rustipy/bin/main.rs"
